# database_vacancies_HH

./: README.md  config.py  db_operations.py  main.py  pyproject.toml
utils/:  queries.sql  class_operations.py  hh_parser.py
