[tool.poetry]
name = "database-vacancies-hh"
version = "0.1.0"
description = "The database_vacancies_hh is project that contains information about employer and their vacancies in a SQL database."
authors = ["Dmitrii"]
readme = "README.md"
packages = [{include = "database_vacancies_hh"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
psycopg2 = "^2.9.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
